--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,13 @@
 	"type": "library",
 	"version": "1.0",
 	"license": "MIT",
-	"require": {},
+	"require": {
+		"php": ">=8.2",
+		"laravel/framework": "^11.0|^12.0"
+	},
+	"require-dev": {
+		"laravel/pint": "^v1.22.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"Frontier\\": "src/",
