Update package structure

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
 	"extra": {
 		"laravel": {
 			"providers": [
-                "Frontier\\Providers\\ServiceProvider",
-				"Frontier\\Providers\\StarterServiceProvider"
+                "Frontier\\Providers\\ServiceProvider"
 			]
 		}
 	}
