--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=8.2",
-		"laravel/framework": "^11.0|^12.0"
+		"illuminate/support": "^10.0|^11.0|^12.0",
+		"illuminate/console": "^10.0|^11.0|^12.0"
 	},
 	"require-dev": {
 		"laravel/pint": "^v1.22.0"
