--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,43 @@
 {
-	"name": "frontier/frontier",
-	"description": "Laravel Frontier Starter Kit",
-	"type": "library",
-	"version": "1.0",
-	"license": "MIT",
-	"require": {
-		"php": ">=8.2",
-		"illuminate/support": "^10.0|^11.0|^12.0",
-		"illuminate/console": "^10.0|^11.0|^12.0"
-	},
-	"require-dev": {
-		"laravel/pint": "^v1.22.0"
-	},
-	"autoload": {
-		"psr-4": {
-			"Frontier\\": "src/",
-			"Frontier\\Tests\\": "tests/"
-		}
-	},
-	"minimum-stability": "stable",
-	"extra": {
-		"laravel": {
-			"providers": [
-                "Frontier\\Providers\\ServiceProvider"
-			]
-		}
-	}
+  "name": "frontier/frontier",
+  "description": "Laravel Frontier Starter Kit",
+  "type": "library",
+  "license": "MIT",
+  "keywords": [
+    "laravel",
+    "starter-kit",
+    "boilerplate"
+  ],
+  "authors": [
+    {
+      "name": "Mohamed Khedr",
+      "email": "0xkhdr@gmail.com",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": ">=8.2",
+    "illuminate/support": "^10.0|^11.0|^12.0",
+    "illuminate/console": "^10.0|^11.0|^12.0"
+  },
+  "require-dev": {
+    "laravel/pint": "^v1.22.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Frontier\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Frontier\\Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Frontier\\Providers\\ServiceProvider"
+      ]
+    }
+  }
 }
